# AortaExplorer

./: .gitignore  AO-AVT.MD  AO-Abdominal.MD  AO-AortaSeg24.MD  AO-CIS-UNET.MD  AO-TS.MD  CHANGELOG.MD  MEASUREMENTS.md  README.md  SCANFOV.md  pyproject.toml  requirements.txt  setup.py
aortaexplorer/: aorta_centerline_utils.py  aorta_utils.py  centerline_utils.py  curvedreformat_utils.py  fileconverter_utils.py  general_utils.py  io_utils.py  measurement_utils.py  python_api.py  segmentation_utils.py  surface_utils.py  totalsegmentator_utils.py  visualization_utils.py
tests/: test_aortaexplorer.py
