[project]
name = "AortaExplorer"
version = "0.1.0"
requires-python = ">=3.9"
description = "AortaExplorer can segment and analyse the human aorta in CT scans."
readme = "readme.md"
license = { file = "LICENSE" }
authors = [
    { name = "Rasmus R. Paulsen", email = "rapa@dtu.dk"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
keywords = [
    'deep learning',
    'image segmentation',
    'semantic segmentation',
    'medical image analysis',
    'medical image segmentation',
    'Aorta',
    'CT'
]
dependencies = [
    "TotalSegmentator>=2.9.0",
]

[project.urls]
homepage = "https://github.com/RasmusRPaulsen/AortaExplorer"
repository = "https://github.com/RasmusRPaulsen/AortaExplorer"


[project.scripts]
AortaExplorer="aortaexplorer.bin.AortaExplorer:main"

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pre-commit"
]

[build-system]
requires = ["setuptools>=67.8.0"]
build-backend = "setuptools.build_meta"

[tool.codespell]
skip = '.git,*.pdf,*.svg'
#
# ignore-words-list = ''